Correction of table misalignment
Fixed table misalignment at Shipping methods of shipping zone

--- a/assets/css/admin.scss
+++ b/assets/css/admin.scss
@@ -3272,7 +3272,7 @@ table.wc_shipping {
 }
 
 .wc-shipping-zone-settings tbody {
-	display: inherit;
+	display: contents;
 }
 
 table {
